--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,10 +34,7 @@
         // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
         // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
         // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
-        "typeRoots": [
-            "./node_modules/@types",
-            "./src/types"
-        ],
+        "typeRoots": ["./node_modules/@types", "./src/types"],
         /* Specify multiple folders that act like './node_modules/@types'. */
         // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
         // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
@@ -123,8 +120,5 @@
         "skipLibCheck": true
         /* Skip type checking all .d.ts files. */
     },
-    "include": [
-        "src/**/*.ts",
-        "src/types/**/*.d.ts"
-    ]
+    "include": ["src/**/*.ts", "src/types/**/*.d.ts"]
 }
