--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "main": "index.ts",
     "scripts": {
         "build": "tsc --build",
-        "start": "node ./dist/index.js",
+        "start": "npm run build && node ./dist/index.js",
         "start:dev": "nodemon ./src/index.ts",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "clean": "tsc --build --clean"
     },
     "dependencies": {
         "bcrypt": "^5.1.1",
