--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "build": "tsc --build",
         "start": "npm run build && node ./dist/index.js",
         "start:dev": "nodemon ./src/index.ts",
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "clean": "tsc --build --clean"
+        "clean": "tsc --build --clean",
+        "test": "jest"
     },
     "dependencies": {
         "bcrypt": "^5.1.1",
@@ -22,12 +22,17 @@
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
         "@types/express": "^5.0.0",
+        "@types/jest": "^29.5.14",
         "@types/jsonwebtoken": "^9.0.8",
         "@types/mongoose": "^5.11.96",
         "@types/node": "^22.10.10",
+        "@types/supertest": "^6.0.2",
         "@types/validator": "^13.12.2",
+        "jest": "^29.7.0",
         "nodemon": "^3.1.9",
         "prettier": "^3.4.2",
+        "supertest": "^7.0.0",
+        "ts-jest": "^29.2.5",
         "ts-node": "^10.9.2",
         "typescript": "^5.7.3"
     },
