Schedule daily cron job to mark expired todos as completed

--- a/sample.env
+++ b/sample.env
@@ -1,4 +1,12 @@
 PORT=8080
-MONGODB_URI=
+
+# MongoDB config
+MONGODB_URI=mongodb://localhost:27017
 DB_NAME=todo-api
+
+# json web token config
 JWT_SECRET=some-jwt-secret
+JWT_EXPIRY=1d
+
+# cron job config /values - true, false
+CRON_ENABLED=false
