--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "http-status-codes": "^2.3.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.9.5",
+        "node-cron": "^3.0.3",
         "validator": "^13.12.0"
     },
     "devDependencies": {
@@ -26,6 +27,7 @@
         "@types/jsonwebtoken": "^9.0.8",
         "@types/mongoose": "^5.11.96",
         "@types/node": "^22.10.10",
+        "@types/node-cron": "^3.0.11",
         "@types/supertest": "^6.0.2",
         "@types/validator": "^13.12.2",
         "jest": "^29.7.0",
